# lem-in

./: .gitignore  CMakeLists.txt  README.md  test1
Examples/: big.txt  big1.txt  flow.txt  flow1.txt  super.txt  super1.txt  super10.txt  super2.txt  super3.txt  super4.txt  super5.txt  super6.txt  super7.txt  super8.txt  super9.txt
src/: main.c
src/color/: color.h  print_color.c
src/graph/: graph.h  graph_delete.c  graph_print_nodes_count.c
src/graph/create_graph/: create_graph.c  create_graph.h  set_ants.c  set_rooms.c  skip_comments.c  validate_string.c
src/graph/create_graph/read/: read.h  read_input.c  read_line.c
src/graph/create_graph/read/list_fd/: list_fd_create_node.c  list_fd_get_elem.c  list_fd_pop.c
src/graph/graph_create/: graph_create.c  graph_create.h  set_ants.c  set_links.c  set_nodes.c  skip_comments.c  validate_string.c
src/graph/graph_delete/: graph_delete.c
src/graph/list_link/: list_link.h  list_link_create_node.c  list_link_pushback.c
src/graph/list_node/: list_node.h  list_node_create_node.c  list_node_pushback.c
src/graph/structs/: s_graph.h  s_link.h  s_node.h
src/list_string/: list_string.h  list_string_create_node.c  list_string_delete.c  list_string_get_last.c  list_string_print.c  list_string_pushback.c
src/main/: main.c
src/manage_flags/: flags_delete.c  manage_flags.c  manage_flags.h
src/other/: exit_error.c  ft_atou.c  ft_memset.c  ft_strcat.c  ft_strcmp.c  ft_strlen.c  ft_strncat.c  other.h  uint_operations.c
src/path/: path.h  path_array_copy.c  path_array_create.c  path_array_delete.c  path_array_print.c  path_array_print_steps_count.c
src/path/create_path_array/: create_path_array.c
src/path/find_paths/: find_paths.c  find_paths.h
src/path/find_paths/count_the_new_cost/: count_new_cost.c  count_new_cost.h  count_the_new_cost.c  count_the_new_cost.h  get_death_zone.c  get_size_of_first_part.c  get_size_of_second_part.c
src/path/find_paths/find_one_path/: bfs_search.c  find_one_path.c  find_one_path.h  set_the_cost_for_the_child.c
src/path/find_paths/insert_the_found_path_into_the_array/: insert_found_path_into_array.c  insert_found_path_into_array.h
src/path/find_paths/insert_the_found_path_into_the_array/swap_paths/: get_sizes.c  swap_paths.c  swap_paths.h
src/path/path_array_init/: path_array_init.c  path_array_init.h
src/path/path_array_init/count_new_cost/: count_new_cost.c
src/path/path_array_init/find_one_path/: bf_search.c  find_one_path.c  find_one_path.h  set_cost_for_child.c
src/path/path_array_init/insert_found_path_into_array/: insert_found_path_into_array.c  insert_found_path_into_array.h
src/path/path_array_init/insert_found_path_into_array/swap_paths/: get_sizes.c  swap_ending.c  swap_paths.c  swap_paths.h
src/path/path_array_init/reverse_links/: reverse_links.c
src/read_from_input/: read_from_input.c  read_from_input.h  read_line.c
src/read_from_input/list_fd/: list_fd.h  list_fd_create_node.c  list_fd_get_elem.c  list_fd_pop.c  list_fd_pushback.c
src/run_ants_through_the_graph/: run_ants_through_the_graph.c  run_ants_through_the_graph.h
src/run_ants_through_the_graph/ant_data/: ant_data.h  ant_data_create.c  ant_data_delete.c
